# roxy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  justfile
.github/workflows/: release.yml  test.yml
docs/: README.md
scripts/: formula.rb.template  test-brew.sh
src/: main.rs
src/application/: install.rs  manage_routes.rs  mod.rs  register_domain.rs  uninstall.rs  unregister_domain.rs
src/cli/: install.rs  list.rs  logs.rs  mod.rs  register.rs  reload.rs  restart.rs  route.rs  start.rs  status.rs  stop.rs  uninstall.rs  unregister.rs
src/daemon/: dns_server.rs  embedded_assets.rs  lifecycle.rs  mod.rs  proxy.rs  router.rs  server.rs  static_files.rs  theme.rs  tls.rs
src/daemon/static_files/: breadcrumb.rs  directory.rs  mod.rs  path_utils.rs  styles.rs
src/domain/: mod.rs  registration.rs
src/domain/value_objects/: domain_name.rs  domain_pattern.rs  mod.rs  path_prefix.rs  port.rs  proxy_target.rs  route.rs  target.rs
src/infrastructure/: logging.rs  mod.rs  paths.rs  pid.rs  tracing.rs
src/infrastructure/certs/: ca.rs  generator.rs  mod.rs  service.rs
src/infrastructure/certs/trust_store/: macos.rs  mod.rs
src/infrastructure/config/: dto.rs  mod.rs
src/infrastructure/dns/: macos.rs  mod.rs
src/infrastructure/network/: mod.rs
tests/: dns_integration.rs
