[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
rcgen = { version = "0.14", features = ["pem"] }
time = "0.3"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# HTTP client (for reverse proxy)
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = [
  "client-legacy",
  "http1",
  "http2",
  "tokio",
  "server-auto",
  "service",
] }
http-body-util = "0.1"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Signal handling
ctrlc = "3.4"

# Utilities
humantime = "2.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DNS
simple-dns = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
